--- a/src/assets/scss/tailwind/tailwind.css
+++ b/src/assets/scss/tailwind/tailwind.css
@@ -1,5 +1,5 @@
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
+.kv-tailwind {
+	@tailwind base;
+	@tailwind utilities;
+	@tailwind components;
+}
