--- a/src/assets/scss/global/forms.scss
+++ b/src/assets/scss/global/forms.scss
@@ -1,39 +1,4 @@
-@import 'settings';
-
-$placeholder-color: $kiva-text-light;
-$placeholder-font-style: italic;
-
-::-webkit-input-placeholder { /* Chrome, Safari, Opera */
-	color: $placeholder-color;
-	font-style: $placeholder-font-style;
-}
-
-::-moz-placeholder { /* Firefox >=19 */
-	color: $placeholder-color;
-	font-style: $placeholder-font-style;
-	opacity: 1 !important;
-}
-
-::-ms-input-placeholder { /* Edge */
-	color: $placeholder-color;
-	font-style: $placeholder-font-style;
-}
-
-:-moz-placeholder { /* Firefox <18 */
-	color: $placeholder-color;
-	font-style: $placeholder-font-style;
-	opacity: 1 !important;
-}
-
-:-ms-input-placeholder { /* IE10-11 */
-	color: $placeholder-color !important;
-	font-style: $placeholder-font-style !important;
-}
-
-::placeholder { /* CSS Working Draft */
-	color: $placeholder-color;
-	font-style: $placeholder-font-style;
-}
+@import "settings";
 
 .input-set {
 	label {
