--- a/src/assets/scss/global/forms.scss
+++ b/src/assets/scss/global/forms.scss
@@ -1,29 +1,17 @@
 @import "settings";
 
-.input-set {
-	label {
-		font-weight: 400;
-		font-size: rem-calc(18);
-	}
-
-	input {
-		padding: rem-calc(5) rem-calc(7);
-		margin-bottom: rem-calc(20);
-	}
-}
-
 // Form validation
 label.error {
 	& + input,
 	& + input:focus {
-		border: 1px solid $kiva-accent-red;
+		border: 1px solid rgb(var(--text-danger));
 	}
 }
 
 // for inputs without a label
 input.error,
 input.error:focus {
-	border: 1px solid $kiva-accent-red;
+	border: 1px solid rgb(var(--text-danger));
 }
 
 // validation error text
@@ -34,7 +22,7 @@ input.error:focus {
 .validation-errors li,
 .validation-error {
 	list-style: none;
-	color: $kiva-accent-red;
+	color: rgb(var(--text-danger));
 	font-weight: $global-weight-highlight;
 	font-size: $small-text-font-size;
 }
