fix: make sure webpack includes fonts that Tailwind config references

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 @include foundation-visibility-classes;
 
 // import global styles
+@import 'global/fonts';
 @import 'global/page-layout';
 @import 'global/line-breaks';
 @import 'global/forms';
